Fix a bunch of syntax errors

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="js/main.js"></script>
     <script src="js/test.js"></script>
     <script src="js/utils.js"></script>
+    <script src="js/test_utils.js"></script>
     
     <!-- Uncomment to run unit tests -->
     <script>
