--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
       <div class="disassembler">
       </div>
     </main>
+    <script src="js/padded_seq_view.js"></script>
     <script src="js/executor.js"></script>
     <script src="js/program.js"></script>
     <script src="js/assembler.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/test.js"></script>
-    <script src="js/utils.js"></script>
     <script src="js/test_utils.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/test.js"></script>
     
     <!-- Uncomment to run unit tests -->
     <script>
