Turn the existing view into a ring buffer

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="disassembler">
       </div>
     </main>
-    <script src="js/padded_seq_view.js"></script>
+    <script src="js/ring_view.js"></script>
     <script src="js/executor.js"></script>
     <script src="js/program.js"></script>
     <script src="js/assembler.js"></script>
