--- a/index.html
+++ b/index.html
@@ -12,30 +12,58 @@
     table, tr, td {
     border: 1px solid black;
     }
+    textarea { display: block; }
+    .pane { width: 50%; border: 1px solid black; margin: 0 auto; }
+    h3 { text-align: center; display: flex; justify-content: space-around;}
+    textarea { width: 100%; }
   </style>
   <body id="pond-root">
-    <h3>If you're on Chrome, enable ES6</h3>
-    <table>
-      <tr><td>Chrome</td><td>chrome://flags/#enable-javascript-harmony</td></tr>
-    </table>
+    <!-- <h3>If you're on Chrome, enable ES6</h3> -->
+    <!-- <table> -->
+    <!--   <tr><td>Chrome</td><td>chrome://flags/#enable-javascript-harmony</td></tr> -->
+    <!-- </table> -->
     <main>
-      <div class="assembler">
+      <div class="pane">
+        <h3>Assembler <button id="btn-assemble">Assemble</button></h3>
+        <textarea id="assembler" rows="10">
+        </textarea>
       </div>
-      <div class="disassembler">
+      <div class="pane">
+        <h3>Debugger <button id="btn-step">Step</button></h3>
+        <div id="debugger">
+          <table class="registers">
+            <tr>
+              <td>pc</td><td id="pc"></td>
+              <td>sp</td><td id="sp"></td>
+              <td>cp</td><td id="cp"></td>
+              <td>rng</td><td id="rng"></td>
+              <td>st</td><td id="st"></td>
+              <td>rng</td><td id="rng"></td>
+            </tr>
+            <tr>
+              <td>r6:r7(R3)</td><td id="R3"></td>
+              <td>r8:r9(R4)</td><td id="R4"></td>
+              <td>r10:r11(R5)</td><td id="R5"></td>
+              <td>r12:r13(R6)</td><td id="R6"></td>
+              <td>r14:r15(R7)</td><td id="R7"></td>
+            </tr>
+          </table>
+        </div>
       </div>
     </main>
     <script src="js/ring_view.js"></script>
     <script src="js/program.js"></script>
     <script src="js/executor.js"></script>
     <script src="js/assembler.js"></script>
-    <script src="js/main.js"></script>
     <script src="js/test_utils.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/test.js"></script>
+    <script src="js/main.js"></script>
     
     <!-- Uncomment to run unit tests -->
     <script>
-      Test.all();
+      //Test.all();
+      Main.bind();
     </script>
   </body>
 </html>
