Fix a few missed serialization bugs

--- a/index.html
+++ b/index.html
@@ -36,12 +36,10 @@
               <td>pc</td><td id="pc"></td>
               <td>sp</td><td id="sp"></td>
               <td>cp</td><td id="cp"></td>
-              <td>rng</td><td id="rng"></td>
               <td>st</td><td id="st"></td>
               <td>rng</td><td id="rng"></td>
             </tr>
             <tr>
-              <td>r6:r7(R3)</td><td id="R3"></td>
               <td>r8:r9(R4)</td><td id="R4"></td>
               <td>r10:r11(R5)</td><td id="R5"></td>
               <td>r12:r13(R6)</td><td id="R6"></td>
@@ -62,7 +60,7 @@
     
     <!-- Uncomment to run unit tests -->
     <script>
-      //Test.all();
+      Test.all();
       Main.bind();
     </script>
   </body>
