--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
 <html>
   <style>
     main {
-      display: flex;
-    }
-    .sidebar {
-    flex-basis: 30%;
-    }
-    main {
-    flex-basis: 70%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     }
     table, tr, td {
     border: 1px solid black;
     }
-    textarea { display: block; }
-    .pane { width: 50%; border: 1px solid black; margin: 0 auto; }
-    h3 { text-align: center; display: flex; justify-content: space-around;}
-    textarea { width: 100%; }
+    .pane { width: 49%; border: 1px solid black; }
+    h3 { text-align: center; display: flex; justify-content: space-around; }
+    textarea { display: block; width: 100%; min-height: 10em; }
   </style>
   <body id="pond-root">
     <!-- <h3>If you're on Chrome, enable ES6</h3> -->
@@ -47,6 +42,10 @@
             </tr>
           </table>
         </div>
+      </div>
+      <div class="pane">
+        <h3>Memory</h3>
+        <textarea id="memory"></textarea>
       </div>
     </main>
     <script src="js/ring_view.js"></script>
