Add child memory view. Copier successfully copies itself.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </textarea>
       </div>
       <div class="pane">
-        <h3>Debugger <button id="btn-step">Step</button></h3>
+        <h3>Debugger <button id="btn-run">Run</button><button id="btn-step">Step</button></h3>
         <div id="debugger">
           <table class="registers">
             <tr>
@@ -46,6 +46,10 @@
       <div class="pane">
         <h3>Memory</h3>
         <textarea id="memory"></textarea>
+      </div>
+      <div class="pane">
+        <h3>Child Memory</h3>
+        <textarea id="child-memory"></textarea>
       </div>
     </main>
     <script src="js/ring_view.js"></script>
