Initial implementation of pool executor

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     <!-- </table> -->
     <main>
       <div class="pane">
+        <h3>Active Programs</h3>
+        <table id="programs">
+        </table>
+      </div>
+      </div>
+      <div class="pane">
         <h3>Assembler <button id="btn-assemble">Assemble</button></h3>
         <textarea id="assembler" rows="10">
         </textarea>
