Change the seed program to keep copying rather than kill itself

--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
         <div id="debugger">
           <table class="registers">
             <tr>
+              <td>GUID</td><td id="guid"></td>
               <td>pc</td><td id="pc"></td>
               <td>sp</td><td id="sp"></td>
               <td>cp</td><td id="cp"></td>
               <td>st</td><td id="st"></td>
-              <td>rng</td><td id="rng"></td>
             </tr>
             <tr>
+              <td>rng</td><td id="rng"></td>
               <td>r8:r9(R4)</td><td id="R4"></td>
               <td>r10:r11(R5)</td><td id="R5"></td>
               <td>r12:r13(R6)</td><td id="R6"></td>
