--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+  <meta charset="UTF-8">
   <style>
     main {
     display: flex;
@@ -9,7 +10,7 @@
     table, tr, td {
     border: 1px solid black;
     }
-    .pane { width: 49%; border: 1px solid black; height: 50%;}
+    .pane { width: 49%; border: 1px solid black; height: 50%; overflow: scroll; }
     h3 { text-align: center; display: flex; justify-content: space-around; }
     textarea { display: block; width: 100%; min-height: 10em; }
     #assembler { height: 50%; }
@@ -21,8 +22,9 @@
     <!-- </table> -->
     <main>
       <div class="pane">
-        <h3>Memory(Colored View)</h3>
-        <canvas id="memory-canvas"></canvas>
+        <h3>Gene Bank</h3>
+        <table id="gene-bank">
+        </table>
       </div>
       <div class="pane">
         <h3>Active Programs</h3>
